First iteration after meeting

--- a/index.html
+++ b/index.html
@@ -271,12 +271,13 @@
                       </div>
                       <div class="row mb-3">
                         <div class="col-sm-6">
-                          <label for="type">Type</label>
-                          <input
-                            type="text"
-                            class="form-control bg-light"
-                            id="type"
-                          />
+                          <div class="form-group mb-0">
+                            <label for="type">Type</label>
+                            <select class="form-control bg-light" id="status">
+                              <option>IT-Komponent</option>
+                              <option>Papir</option>
+                            </select>
+                          </div>
                         </div>
                         <div class="col-sm-6">
                           <label for="enr">E-nr.</label>
