Played with design for table accordion

--- a/heuristiskenhed-papir.html
+++ b/heuristiskenhed-papir.html
@@ -1163,9 +1163,6 @@ of Lorem Ipsum.
                                     <th scope="col" class="hidden" width="20">
                                       &nbsp;
                                     </th>
-                                    <th scope="col" class="hidden" width="20">
-                                      &nbsp;
-                                    </th>
                                   </tr>
                                 </thead>
 
@@ -1181,20 +1178,6 @@ of Lorem Ipsum.
                                     <td>8 cm. stort format</td>
                                     <td>
                                       Eksx14
-                                    </td>
-                                    <td class="text-right">
-                                      <svg
-                                        class="icon"
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        width="20"
-                                        height="20"
-                                        viewBox="0 0 20 20"
-                                      >
-                                        <path
-                                          fill-rule="nonzero"
-                                          d="M18.76 4.878a10.555 10.555 0 0 0-1.59-2.026 10.563 10.563 0 0 0-2.063-1.595L16.364 0s1.818 0 2.727.91C20 1.817 20 3.635 20 3.635l-1.24 1.242zM8.181 15.455H4.545v-3.637l.437-.436a7.624 7.624 0 0 1 3.636 3.636l-.436.437zm9.527-9.528l-8.042 8.041a10.502 10.502 0 0 0-3.652-3.62l8.058-8.057a7.594 7.594 0 0 1 3.636 3.636zm-14.982-3.2v14.546h14.546v-6.364L20 8.147v10.035A1.818 1.818 0 0 1 18.182 20H1.818A1.818 1.818 0 0 1 0 18.182V1.818C0 .815.815 0 1.818 0h10.01L9.098 2.727H2.727z"
-                                        />
-                                      </svg>
                                     </td>
                                     <td class="text-right">
                                       <a
@@ -1224,24 +1207,10 @@ of Lorem Ipsum.
                                     aria-controls="collapseTwo"
                                     href="#collapseTwo"
                                   >
-                                    <td>VIII.b-1</td>
+                                    <td>VIII.b-2</td>
                                     <td>8 cm. stort format</td>
                                     <td>
                                       &nbsp;
-                                    </td>
-                                    <td class="text-right">
-                                      <svg
-                                        class="icon"
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        width="20"
-                                        height="20"
-                                        viewBox="0 0 20 20"
-                                      >
-                                        <path
-                                          fill-rule="nonzero"
-                                          d="M18.76 4.878a10.555 10.555 0 0 0-1.59-2.026 10.563 10.563 0 0 0-2.063-1.595L16.364 0s1.818 0 2.727.91C20 1.817 20 3.635 20 3.635l-1.24 1.242zM8.181 15.455H4.545v-3.637l.437-.436a7.624 7.624 0 0 1 3.636 3.636l-.436.437zm9.527-9.528l-8.042 8.041a10.502 10.502 0 0 0-3.652-3.62l8.058-8.057a7.594 7.594 0 0 1 3.636 3.636zm-14.982-3.2v14.546h14.546v-6.364L20 8.147v10.035A1.818 1.818 0 0 1 18.182 20H1.818A1.818 1.818 0 0 1 0 18.182V1.818C0 .815.815 0 1.818 0h10.01L9.098 2.727H2.727z"
-                                        />
-                                      </svg>
                                     </td>
                                     <td class="text-right" width="20">
                                       <a
@@ -1272,7 +1241,7 @@ of Lorem Ipsum.
                                 aria-labelledby="headingOne"
                                 data-parent="#accordionEks"
                               >
-                                <div class="card m-lg-3">
+                                <div class="card m-lg-5">
                                   <div class="card-body">
                                     <div
                                       class="d-flex align-items-center justify-content-between"
@@ -1856,21 +1825,43 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                               </div>
                               <div
                                 id="collapseTwo"
-                                class="collapse bg-light pt-3"
+                                class="collapse bg-secondary pt-1 pb-1"
                                 aria-labelledby="headingTwo"
                                 data-parent="#accordionEks"
                               >
-                                <div class="card m-lg-3 bg-light">
-                                  <div class="card-body bg-white">
-                                    <h3 class="font-weight-bold mt-3 mb-3">
-                                      VIII.b-1, 8 cm. stort format
+                                <div class="card m-lg-5">
+                                  <div class="card-body">
+                                    <h3 class="mb-5">
+                                      <span class="font-weight-bold"
+                                        >VIII.b-1</span
+                                      >,
+                                      <span class="text-secondary"
+                                        >8 cm. stort format</span
+                                      >
                                     </h3>
                                     <div class="row">
                                       <div class="col-sm-12">
-                                        <h5 class="font-weight-bold mt-5 mb-3">
-                                          Heuristisk identikatorformat (HIF)
-                                        </h5>
-                                        <div class="row mt-3 mb-3">
+                                        <div
+                                          class="d-flex align-items-center mt-3 mb-3"
+                                        >
+                                          <svg
+                                            class="mr-3"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            width="24"
+                                            height="24"
+                                            viewBox="0 0 16 16"
+                                          >
+                                            <path
+                                              fill="#686868"
+                                              fill-rule="evenodd"
+                                              d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
+                                            />
+                                          </svg>
+                                          <h5 class="font-weight-bold mb-0">
+                                            Heuristisk identikatorformat (HIF)
+                                          </h5>
+                                        </div>
+                                        <div class="row mt-3 mb-5">
                                           <div class="col-sm-12">
                                             <div class="card">
                                               <div class="card-body p-0 m-0">
@@ -2062,14 +2053,29 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                             <span>Tilføj Eksisterende HIF</span>
                                           </button>
                                         </div>
-                                        <div class="row mt-3 mb-3">
+                                        <div class="row mt-3 mb-5">
                                           <div class="col-sm-12">
-                                            <h5
-                                              class="font-weight-bold mt-5 mb-3"
+                                            <div
+                                              class="d-flex align-items-center mt-3 mb-3"
                                             >
-                                              Fremfindingsindentikatorformat
-                                              (FIF)
-                                            </h5>
+                                              <svg
+                                                class="mr-3"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                width="24"
+                                                height="24"
+                                                viewBox="0 0 16 16"
+                                              >
+                                                <path
+                                                  fill="#686868"
+                                                  fill-rule="evenodd"
+                                                  d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
+                                                />
+                                              </svg>
+                                              <h5 class="font-weight-bold mb-0">
+                                                Fremfindingsindentikatorformat
+                                                (FIF)
+                                              </h5>
+                                            </div>
                                             <div class="card mr-3">
                                               <div class="card-body p-0 m-0">
                                                 <table
@@ -2170,12 +2176,27 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                         </div>
                                         <div class="row mt-3 mb-5">
                                           <div class="col-sm-12">
-                                            <h5
-                                              class="font-weight-bold mt-5 mb-3"
+                                            <div
+                                              class="d-flex align-items-center mt-3 mb-3"
                                             >
-                                              Registreringsindentikatorformat
-                                              (RIF)
-                                            </h5>
+                                              <svg
+                                                class="mr-3"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                width="24"
+                                                height="24"
+                                                viewBox="0 0 16 16"
+                                              >
+                                                <path
+                                                  fill="#686868"
+                                                  fill-rule="evenodd"
+                                                  d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
+                                                />
+                                              </svg>
+                                              <h5 class="font-weight-bold mb-0">
+                                                Registreringsindentikatorformat
+                                                (RIF)
+                                              </h5>
+                                            </div>
                                             <div class="card">
                                               <div class="card-body p-0 m-0">
                                                 <table
