--- a/heuristiskenhed.html
+++ b/heuristiskenhed.html
@@ -853,6 +853,7 @@
                                 >
                                   <path
                                     fill-rule="evenodd"
+                                    fill="#686868"
                                     d="M10 5c0-1.11-.89-2-2-2a1.993 1.993 0 0 0-1 3.72v.3c-.02.52-.23.98-.63 1.38-.4.4-.86.61-1.38.63-.83.02-1.48.16-2 .45V4.72a1.993 1.993 0 0 0-1-3.72C.88 1 0 1.89 0 3a2 2 0 0 0 1 1.72v6.56c-.59.35-1 .99-1 1.72 0 1.11.89 2 2 2 1.11 0 2-.89 2-2 0-.53-.2-1-.53-1.36.09-.06.48-.41.59-.47.25-.11.56-.17.94-.17 1.05-.05 1.95-.45 2.75-1.25S8.95 7.77 9 6.73h-.02C9.59 6.37 10 5.73 10 5zM2 1.8c.66 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2C1.35 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2zm0 12.41c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm6-8c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z"
                                   />
                                 </svg>
@@ -1104,6 +1105,7 @@ of Lorem Ipsum.
                             viewBox="0 0 14 16"
                           >
                             <path
+                              fill="#686868"
                               fill-rule="evenodd"
                               d="M13 2h-1v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H6v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H2c-.55 0-1 .45-1 1v11c0 .55.45 1 1 1h11c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm0 12H2V5h11v9zM5 3H4V1h1v2zm6 0h-1V1h1v2zM6 7H5V6h1v1zm2 0H7V6h1v1zm2 0H9V6h1v1zm2 0h-1V6h1v1zM4 9H3V8h1v1zm2 0H5V8h1v1zm2 0H7V8h1v1zm2 0H9V8h1v1zm2 0h-1V8h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1zm2 0h-1v-1h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1z"
                             />
@@ -1426,6 +1428,7 @@ of Lorem Ipsum.
                     >
                       <path
                         fill-rule="evenodd"
+                        fill="#686868"
                         d="M12.01 13c0 .59 0 1-.59 1H4.6c-.59 0-.59-.41-.59-1 0-.59 0-1 .59-1h6.81c.59 0 .59.41.59 1h.01zM4.6 4h6.81C12 4 12 3.59 12 3c0-.59 0-1-.59-1H4.6c-.59 0-.59.41-.59 1 0 .59 0 1 .59 1zm6.81 3H4.6c-.59 0-.59.41-.59 1 0 .59 0 1 .59 1h6.81C12 9 12 8.59 12 8c0-.59 0-1-.59-1zm-9.4-6h-.72c-.3.19-.58.25-1.03.34V2h.75v2.14H.17V5h2.84v-.86h-1V1zm.392 8.12c-.129 0-.592.04-.802.07.53-.56 1.14-1.25 1.14-1.89C2.72 6.52 2.18 6 1.38 6c-.59 0-.97.2-1.38.64l.58.58c.19-.19.38-.38.64-.38.28 0 .48.16.48.52 0 .53-.77 1.2-1.7 2.06V10h3v-.88h-.598zm-.222 3.79v-.03c.44-.19.64-.47.64-.86 0-.7-.56-1.11-1.44-1.11-.48 0-.89.19-1.28.52l.55.64c.25-.2.44-.31.69-.31.27 0 .42.13.42.36 0 .27-.2.44-.86.44v.75c.83 0 .98.17.98.47 0 .25-.23.38-.58.38-.28 0-.56-.14-.81-.38l-.48.66c.3.36.77.56 1.41.56.83 0 1.53-.41 1.53-1.16 0-.5-.31-.81-.77-.94v.01z"
                       />
                     </svg>
@@ -1468,9 +1471,6 @@ of Lorem Ipsum.
                             <th scope="col" class="hidden" width="20">
                               &nbsp;
                             </th>
-                            <th scope="col" class="hidden" width="20">
-                              &nbsp;
-                            </th>
                           </tr>
                         </thead>
 
@@ -1486,20 +1486,6 @@ of Lorem Ipsum.
                             <td>1910</td>
                             <td>
                               1944
-                            </td>
-                            <td class="text-right">
-                              <svg
-                                class="icon"
-                                xmlns="http://www.w3.org/2000/svg"
-                                width="20"
-                                height="20"
-                                viewBox="0 0 20 20"
-                              >
-                                <path
-                                  fill-rule="nonzero"
-                                  d="M18.76 4.878a10.555 10.555 0 0 0-1.59-2.026 10.563 10.563 0 0 0-2.063-1.595L16.364 0s1.818 0 2.727.91C20 1.817 20 3.635 20 3.635l-1.24 1.242zM8.181 15.455H4.545v-3.637l.437-.436a7.624 7.624 0 0 1 3.636 3.636l-.436.437zm9.527-9.528l-8.042 8.041a10.502 10.502 0 0 0-3.652-3.62l8.058-8.057a7.594 7.594 0 0 1 3.636 3.636zm-14.982-3.2v14.546h14.546v-6.364L20 8.147v10.035A1.818 1.818 0 0 1 18.182 20H1.818A1.818 1.818 0 0 1 0 18.182V1.818C0 .815.815 0 1.818 0h10.01L9.098 2.727H2.727z"
-                                />
-                              </svg>
                             </td>
                             <td class="text-right">
                               <a
@@ -1534,20 +1520,6 @@ of Lorem Ipsum.
                             <td>
                               1944
                             </td>
-                            <td class="text-right">
-                              <svg
-                                class="icon"
-                                xmlns="http://www.w3.org/2000/svg"
-                                width="20"
-                                height="20"
-                                viewBox="0 0 20 20"
-                              >
-                                <path
-                                  fill-rule="nonzero"
-                                  d="M18.76 4.878a10.555 10.555 0 0 0-1.59-2.026 10.563 10.563 0 0 0-2.063-1.595L16.364 0s1.818 0 2.727.91C20 1.817 20 3.635 20 3.635l-1.24 1.242zM8.181 15.455H4.545v-3.637l.437-.436a7.624 7.624 0 0 1 3.636 3.636l-.436.437zm9.527-9.528l-8.042 8.041a10.502 10.502 0 0 0-3.652-3.62l8.058-8.057a7.594 7.594 0 0 1 3.636 3.636zm-14.982-3.2v14.546h14.546v-6.364L20 8.147v10.035A1.818 1.818 0 0 1 18.182 20H1.818A1.818 1.818 0 0 1 0 18.182V1.818C0 .815.815 0 1.818 0h10.01L9.098 2.727H2.727z"
-                                />
-                              </svg>
-                            </td>
                             <td class="text-right" width="20">
                               <a
                                 href="#delete"
@@ -1573,19 +1545,32 @@ of Lorem Ipsum.
                       </table>
                       <div
                         id="collapseOne"
-                        class="collapse"
+                        class="collapse bg-secondary p-lg-3"
                         aria-labelledby="headingOne"
                         data-parent="#accordionEks"
                       >
                         <div class="card m-lg-5">
                           <div class="card-body">
-                            <div
-                              class="d-flex align-items-center justify-content-between"
-                            >
-                              <h4 class="mt-3 mb-3">
-                                Heuristisk identikatorformat (HIF) for
-                                <span class="font-weight-bold">802367816</span>
-                              </h4>
+                            <h3 class="font-weight-bold mb-5">
+                              # 802367816
+                            </h3>
+                            <div class="d-flex align-items-center mt-3 mb-3">
+                              <svg
+                                class="mr-3"
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24"
+                                height="24"
+                                viewBox="0 0 16 16"
+                              >
+                                <path
+                                  fill="#686868"
+                                  fill-rule="evenodd"
+                                  d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
+                                />
+                              </svg>
+                              <h5 class="font-weight-bold mb-0">
+                                Heuristisk identikatorformat (HIF)
+                              </h5>
                             </div>
                             <div class="row mt-3 mb-3">
                               <div class="col-sm-12">
@@ -1746,19 +1731,32 @@ of Lorem Ipsum.
                       </div>
                       <div
                         id="collapseTwo"
-                        class="collapse"
+                        class="collapse bg-secondary p-lg-3"
                         aria-labelledby="headingTwo"
                         data-parent="#accordionEks"
                       >
-                        <div class="card m-lg-5 bg-light">
+                        <div class="card m-lg-5">
                           <div class="card-body">
-                            <div
-                              class="d-flex align-items-center justify-content-between"
-                            >
-                              <h4 class="mt-3 mb-3">
-                                Heuristisk identikatorformat (HIF) for
-                                <span class="font-weight-bold">802367817</span>
-                              </h4>
+                            <h3 class="mb-5 font-weight-bold">
+                              # 802367817
+                            </h3>
+                            <div class="d-flex align-items-center mt-3 mb-3">
+                              <svg
+                                class="mr-3"
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24"
+                                height="24"
+                                viewBox="0 0 16 16"
+                              >
+                                <path
+                                  fill="#686868"
+                                  fill-rule="evenodd"
+                                  d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
+                                />
+                              </svg>
+                              <h5 class="font-weight-bold mb-0">
+                                Heuristisk identikatorformat (HIF)
+                              </h5>
                             </div>
                             <div class="row mt-3 mb-3">
                               <div class="col-sm-12">
