More fixed based on meeting

--- a/arbejdsopgave.html
+++ b/arbejdsopgave.html
@@ -66,7 +66,7 @@
               <a href="/search/search-arbejdsopgave.html" class="d-flex mb-4"
                 >« Tilbage</a
               >
-              <span class="badge badge-primary badge-pill mt-2 mb-4"
+              <span class="badge badge-green badge-pill mt-2 mb-4"
                 >Arbejdsopgave</span
               >
               <h1 class="font-weight-bold">Min arbejdsopgave</h1>
@@ -605,7 +605,7 @@ Nørregade 56
                       <tr>
                         <th scope="col" class="d-flex align-items-center">
                           <div
-                            class="form-check form-inline p-0 d-flex align-items-center"
+                            class="form-check form-inline p-0 d-flex align-items-center clickable-checkbox"
                           >
                             <input
                               class="form-check-input"
@@ -629,7 +629,7 @@ Nørregade 56
                       <tr class="clickable-checkbox">
                         <td>
                           <div
-                            class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                            class="form-check form-inline p-0 d-flex align-items-center mt-1 clickable-checkbox"
                           >
                             <input
                               class="form-check-input"
@@ -651,7 +651,7 @@ Nørregade 56
                       <tr class="clickable-checkbox">
                         <td>
                           <div
-                            class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                            class="form-check form-inline p-0 d-flex align-items-center mt-1 clickable-checkbox"
                           >
                             <input
                               class="form-check-input"
@@ -673,7 +673,7 @@ Nørregade 56
                       <tr class="clickable-checkbox">
                         <td>
                           <div
-                            class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                            class="form-check form-inline p-0 d-flex align-items-center mt-1 clickable-checkbox"
                           >
                             <input
                               class="form-check-input"
@@ -695,7 +695,7 @@ Nørregade 56
                       <tr class="clickable-checkbox">
                         <td>
                           <div
-                            class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                            class="form-check form-inline p-0 d-flex align-items-center mt-1 clickable-checkbox"
                           >
                             <input
                               class="form-check-input"
@@ -723,7 +723,7 @@ Nørregade 56
           <div class="modal-footer">
             <button
               type="button"
-              class="btn btn-primary d-flex align-items-center"
+              class="btn btn-primary d-flex align-items-center save"
               data-dismiss="modal"
             >
               <svg
