--- a/arkivskaber.html
+++ b/arkivskaber.html
@@ -66,7 +66,7 @@
               <a href="/search/search-arkivskaber.html" class="d-flex mb-4"
                 >« Tilbage</a
               >
-              <span class="badge badge-primary badge-pill mt-2 mb-4"
+              <span class="badge badge-purple badge-pill mt-2 mb-4"
                 >Arkivskaber</span
               >
               <h1 class="font-weight-bold">Frederiksberg Politi</h1>
@@ -1843,11 +1843,11 @@ of Lorem Ipsum.
                 </h4>
               </div>
             </div>
-            <div class="card special mt-3 mb-3">
+            <div class="card mt-3 mb-3">
               <div class="card-body p-0">
                 <div class="table-responsive">
                   <table
-                    id=""
+                    id="tilknyt-overordnede"
                     width="100%"
                     class="table sorting table-hover table-striped mb-0"
                   >
@@ -1861,7 +1861,7 @@ of Lorem Ipsum.
                     </thead>
                     <tbody>
                       <tr
-                        class="clickable-row"
+                        class="clickable-row save"
                         data-href="#"
                         data-dismiss="modal"
                       >
@@ -1871,7 +1871,7 @@ of Lorem Ipsum.
                         <td>Officielt</td>
                       </tr>
                       <tr
-                        class="clickable-row"
+                        class="clickable-row save"
                         data-href="#"
                         data-dismiss="modal"
                       >
@@ -1881,7 +1881,7 @@ of Lorem Ipsum.
                         <td>Officielt</td>
                       </tr>
                       <tr
-                        class="clickable-row"
+                        class="clickable-row save"
                         data-href="#"
                         data-dismiss="modal"
                       >
@@ -1891,7 +1891,7 @@ of Lorem Ipsum.
                         <td>Officielt</td>
                       </tr>
                       <tr
-                        class="clickable-row"
+                        class="clickable-row save"
                         data-href="#"
                         data-dismiss="modal"
                       >
@@ -2024,7 +2024,7 @@ of Lorem Ipsum.
               <div class="card-body p-0">
                 <div class="table-responsive">
                   <table
-                    id=""
+                    id="tilknyt-underordnede"
                     width="100%"
                     class="table sorting table-hover table-striped mb-0"
                   >
@@ -2053,7 +2053,7 @@ of Lorem Ipsum.
                       <tr class="clickable-checkbox">
                         <td>
                           <div
-                            class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                            class="form-check form-inline p-0 d-flex align-items-center mt-1 clickable-checkbox"
                           >
                             <input
                               class="form-check-input"
@@ -2071,7 +2071,7 @@ of Lorem Ipsum.
                       <tr class="clickable-checkbox">
                         <td>
                           <div
-                            class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                            class="form-check form-inline p-0 d-flex align-items-center mt-1 clickable-checkbox"
                           >
                             <input
                               class="form-check-input"
@@ -2089,7 +2089,7 @@ of Lorem Ipsum.
                       <tr class="clickable-checkbox">
                         <td>
                           <div
-                            class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                            class="form-check form-inline p-0 d-flex align-items-center mt-1 clickable-checkbox"
                           >
                             <input
                               class="form-check-input"
@@ -2107,7 +2107,7 @@ of Lorem Ipsum.
                       <tr class="clickable-checkbox">
                         <td>
                           <div
-                            class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                            class="form-check form-inline p-0 d-flex align-items-center mt-1 clickable-checkbox"
                           >
                             <input
                               class="form-check-input"
@@ -2131,7 +2131,7 @@ of Lorem Ipsum.
           <div class="modal-footer">
             <button
               type="button"
-              class="btn btn-primary d-flex align-items-center"
+              class="btn btn-primary d-flex align-items-center save"
               data-dismiss="modal"
             >
               <svg
